--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <img src="images/wave.svg" alt="">
         <div id="footer_items">
             <span id="copyright">
-                &copy 2024 Daniel Zanquennidy
+                &copy 2024 Daniel Z
             </span>
             <div class="social-media-button">
                 <a href="">
